# internal/application/response/user_response.go
@@ -7,3 +7,8 @@ type RegisterUserResponse struct {
 type LoginUserResponse struct {
 	AccessToken string `json:"access_token"`
 }
+
+type ProfileUserResponse struct {
+	Id    int64  `json:"id"`
+	Email string `json:"email"`
+}
